Small spacing fixes

--- a/meeting-agenda-builder/meeting-agenda-builder.scss
+++ b/meeting-agenda-builder/meeting-agenda-builder.scss
@@ -438,6 +438,7 @@ a:hover {
 	border-radius: $borderRadius;
 	padding: 5px;
 	width: 600px;
+	margin-top: $standardSpace;
 	margin-right: auto;
 	margin-left: auto;
 	overflow: hidden;
